--- a/src/index.html
+++ b/src/index.html
@@ -11,3 +11,8 @@
     <app-root></app-root>
   </body>
 </html>
+
+<!-- L’utilisateur modifie son nom et son âge dans ActiveUserComponent et clique sur "MAJ des Data".
+L’événement userUpdated est émis avec les nouvelles données.
+La fonction updateUser($event) de ComponentCommunicationComponent est appelée, mettant à jour activeUser.
+Les nouvelles données sont automatiquement envoyées à UserDataComponent via [user]="activeUser", et l'affichage est mis à jour. -->
